--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.8.1
 attrs==25.3.0
 Django==5.1.6
+django-ckeditor==6.7.3
+django-js-asset==3.1.2
+django-parler==2.3
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 drf-spectacular==0.28.0
@@ -9,6 +12,7 @@ inflection==0.5.1
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
 packaging==25.0
+pillow==11.2.1
 psycopg2-binary==2.9.10
 PyJWT==2.9.0
 python-dotenv==1.0.1
