--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 attrs==25.3.0
 Django==5.1.6
 django-ckeditor==6.7.3
+django-jazzmin==3.0.1
 django-js-asset==3.1.2
 django-parler==2.3
 djangorestframework==3.16.0
