--- a/compose.yaml
+++ b/compose.yaml
@@ -1,17 +1,17 @@
 services:
-  #db:
-    #image: postgres:15
-    #container_name: loyalty-api-db
-    #environment:
-     # - POSTGRES_DB=${DATABASE_NAME}
-      #- POSTGRES_USER=${DATABASE_USER}
-      #- POSTGRES_PASSWORD=${DATABASE_PASSWORD}
-    #env_file:
-     # - ./.env
-    #ports:
-     # - '5433:5432'
-    #volumes:
-     # - pg_data:/var/lib/postgresql/data
+  db:
+    image: postgres:15
+    container_name: loyalty-api-db
+    environment:
+     - POSTGRES_DB=${DATABASE_NAME}
+      - POSTGRES_USER=${DATABASE_USER}
+      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
+    env_file:
+      - ./.env
+    ports:
+      - '5433:5432'
+    volumes:
+      - pg_data:/var/lib/postgresql/data
 
   web:
     build: .
